--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
 body{
   width:100%;
 }
-.navbar .nav{float:none;}
-.nav li{width:25%;}
+.bottom-bar{
+  background: #819d51;
+  height:40px;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  box-shadow: -10px 0 5px black;
+}
+.bottom-bar ul{list-style: none;}
+.bottom-bar ul li{display: inline-block; line-height: 40px;}
+.bottom-bar ul li a{color: black;}
+.bottom-bar ul li a:hover{color: white;text-shadow:0 0 10px white; text-align: none};
