--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
-body{margin:0 auto;}
-ul#account-list li.btn{display: list-item; text-align: left; list-style: none;font-size: 3em;width: 100%;height:5em; line-height: 5em}
+body{margin:0 auto;overflow-x:hidden}
+ul#account-list{margin: 0; padding: 0}
+ul#account-list li.btn{;display: list-item; text-align: left; list-style: none;font-size: 3em;width: 100%;height:5em; line-height: 5em}
 .bottom-bar{background: #819d51;height:100px;position: fixed;bottom: 0;left: 0;width: 100%;box-shadow: -10px 0 5px black;}
 ul#account-list li img.platform-icon{float: right;}
 ul#account-list li img.avatar{width: 4em;height: 4em}
