--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body{margin:0 auto;overflow-x:hidden}
 ul#account-list{margin: 0; padding: 0;}
-ul#account-list li.active{background:#566935}
 ul#account-list li.btn{;display: list-item; text-align: left; list-style: none;font-size: 3em;width: 100%;height:5em; line-height: 5em;border-radius: 0;padding: 0}
 ul#account-list li.btn.title{height: 3em; line-height: 3em; text-align: center; background: black;color: white;border: none;}
-.bottom-bar{background: #819d51;height:100px;position: fixed;bottom: 0;left: 0;width: 110%;box-shadow: -10px 0 5px black;}
 ul#account-list li img.platform-icon{float: right;width: 3em;height: 3em; margin-top: 1em; margin-right: 1em}
 ul#account-list li img.avatar{width: 2em;height: 2em; margin-left: 1em}
+.bottom-bar{padding-left:0.5em;margin-left:0;background: #819d51;height:100px;position: fixed;bottom: 0;left: 0;width: 110%;box-shadow: -10px 0 5px black; border-left: 0.5em solid black}
+.bottom-bar li.active{background:#566935;}
 .bottom-bar [class^="icon-"], .bottom-bar [class*="icon-"]{margin-top: 10px; margin-right: 10px;}
 .bottom-bar ul{list-style: none;}
-.bottom-bar ul li{display: inline-block; line-height: 10px;}
+.bottom-bar ul li{display: inline-block; line-height: 10px; padding: 0 10px}
 .bottom-bar ul li a{color: black;font-size: 2em; line-height: 100px;}
 .bottom-bar ul li a:hover{color: white;text-shadow:0 0 10px white; text-decoration: none;};
