--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,15 @@ ul#account-list li.btn.title{text-align: center;}
 select#timeline-select,select#status-select{height: 3em; font-size: 3em;width: 100%;margin: 0; padding: 0}
 ul#account-list li img.platform-icon{float: right;width: 2em;height: 2em; margin-top: 1em; margin-right: 1em}
 ul#account-list li img.avatar{width: 3em;height: 3em; margin-left: 1em}
-.bottom-bar{padding-left:0.5em;margin-left:0;background: #819d51;height:100px;position: fixed;bottom: 0;left: 0;width: 110%;box-shadow: -10px 0 20px black; border-left: 0.5em solid black}
+.bottom-bar{z-index: 5;padding-left:0.5em;margin-left:0;background: #819d51;height:100px;position: fixed;bottom: 0;left: 0;width: 110%;box-shadow: -10px 0 20px black; border-left: 0.5em solid black}
 .bottom-bar li.active{background:#566935;}
 .bottom-bar [class^="icon-"], .bottom-bar [class*="icon-"]{margin-top: 10px; margin-right: 10px;}
 .bottom-bar ul{list-style: none;}
 .bottom-bar ul li{display: inline-block; line-height: 10px; padding: 0 10px}
 .bottom-bar ul li a{color: black;font-size: 2em; line-height: 100px;}
 .bottom-bar ul li a:hover{color: white;text-shadow:0 0 10px white; text-decoration: none;}
-#return-aclist{font-size:3em;position:fixed; bottom:0;right:1em; padding:0 20px;z-index: 2; height: 100px;line-height: 100px;}
+#return-aclist{font-size:3em;position:fixed; bottom:0;right:1em; padding:0 20px;z-index: 6; height: 100px;line-height: 100px;}
 #return-aclist:hover{color: white}
 .tooltip{font-size: 3em}
+.nav-tabs{padding-left: 1em;}
+.nav-tabs li a{font-size: 3em;line-height: 3em}
