--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,4 @@ ul#account-list li img.avatar{width: 3em;height: 3em; margin-left: 1em}
 .tooltip{font-size: 3em}
 .nav-tabs{padding-left: 1em;}
 .nav-tabs li a{font-size: 3em;line-height: 3em}
+h5{font-size: 3em}
