--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body{margin:0 auto;overflow-x:hidden}
 .content{padding-bottom: 100px; position: relative;}
 ul#account-list{margin: 0; padding: 0;}
-ul#account-list li.btn{;display: list-item; text-align: left; list-style: none;font-size: 3em;width: 100%;height:5em; line-height: 5em;border-radius: 0;padding: 0}
+ul#account-list li.btn{;display: list-item; text-align: left; list-style: none; font-size:3em;width: 100%;height:5em; line-height: 5em;border-radius: 0;padding: 0}
 ul#account-list li.btn.title{text-align: center;}
-.btn.title{height: 3em; line-height: 3em; text-align: center; background: black;color: white;border: none; width: 100%;border-radius: 0}
+.btn.title{font-size:3em;height: 3em; line-height: 3em; text-align: center; background: black;color: white;border: none; width: 100%;border-radius: 0}
 select#timeline-select,select#status-select{height: 3em; font-size: 3em;width: 100%;margin: 0; padding: 0}
 ul#account-list li img.platform-icon{float: right;width: 2em;height: 2em; margin-top: 1em; margin-right: 1em}
 ul#account-list li img.avatar{width: 3em;height: 3em; margin-left: 1em}
@@ -19,4 +19,3 @@ ul#account-list li img.avatar{width: 3em;height: 3em; margin-left: 1em}
 .tooltip{font-size: 3em}
 .nav-tabs{padding-left: 1em;}
 .nav-tabs li a{font-size: 3em;line-height: 3em}
-h5{font-size: 3em}
