--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body{margin:0 auto;overflow-x:hidden}
 .content{padding-bottom: 100px; position: relative;}
 ul#account-list{margin: 0; padding: 0;}
-ul#account-list li.btn{;display: list-item; text-align: left; list-style: none; font-size:3em;width: 100%;height:5em; line-height: 5em;border-radius: 0;padding: 0}
+ul#account-list li.btn{;display: list-item; text-align: left; list-style: none; width: 100%;height:5em; line-height: 5em;border-radius: 0;padding: 0}
 ul#account-list li.btn.title{text-align: center;}
-.btn.title{font-size:3em;height: 3em; line-height: 3em; text-align: center; background: black;color: white;border: none; width: 100%;border-radius: 0}
+.btn.title{height: 3em; line-height: 3em; text-align: center; background: black;color: white;border: none; width: 100%;border-radius: 0}
 select#timeline-select,select#status-select{height: 3em; font-size: 3em;width: 100%;margin: 0; padding: 0}
 ul#account-list li img.platform-icon{float: right;width: 2em;height: 2em; margin-top: 1em; margin-right: 1em}
 ul#account-list li img.avatar{width: 3em;height: 3em; margin-left: 1em}
@@ -14,7 +14,7 @@ ul#account-list li img.avatar{width: 3em;height: 3em; margin-left: 1em}
 .bottom-bar ul li{display: inline-block; line-height: 10px; padding: 0 10px}
 .bottom-bar ul li a{color: black;font-size: 2em; line-height: 100px;}
 .bottom-bar ul li a:hover{color: white;text-shadow:0 0 10px white; text-decoration: none;}
-#return-aclist{font-size:3em;position:fixed; bottom:0;right:1em; padding:0 20px;z-index: 6; height: 100px;line-height: 100px;}
+#return-aclist{position:fixed; bottom:0;right:1em; padding:0 20px;z-index: 6; height: 100px;line-height: 100px;}
 #return-aclist:hover{color: white}
 .tooltip{font-size: 3em}
 .nav-tabs{padding-left: 1em;}
