--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@ ul#account-list li img.avatar{margin-left: 1em}
 .bottom-bar{z-index: 5;margin-left:0;background: #819d51;height:40px;position: fixed;bottom: 0;left: 0;width: 100%;box-shadow: 0 0 5px black; border-left: 0.5em solid black}
 .bottom-bar li.active{background:#566935;}
 .bottom-bar [class^="icon-"], .bottom-bar [class*="icon-"]{margin-top: 10px; margin-right: 10px;}
-.bottom-bar ul{list-style: none;}
+.bottom-bar ul{list-style: none; margin: 0}
 .bottom-bar ul li{display: inline-block; padding: 0 10px}
-.bottom-bar ul li a{color: black;line-height: 40px;}
+.bottom-bar ul li a{color: black;line-height: 40px;font-size: 10px;}
 .bottom-bar ul li a:hover{color: white;text-shadow:0 0 10px white; text-decoration: none;}
 #return-aclist{position:fixed; bottom:0;right:1em; padding:0 20px;z-index: 6; height: 40px;line-height: 40px;}
 #return-aclist:hover{color: white}
