--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,6 @@ ul#account-list li img.avatar{margin-left: 1em}
 .bottom-bar ul li{display: inline-block; padding: 0 10px}
 .bottom-bar ul li a{color: black;line-height: 40px;font-size: 10px;}
 .bottom-bar ul li a:hover{color: white;text-shadow:0 0 10px white; text-decoration: none;}
-#return-aclist{position:fixed; bottom:0;right:1em; padding:0 20px;z-index: 6; height: 40px;line-height: 40px;}
+#return-aclist{position:fixed; bottom:0;right:10px;padding:0 20px;z-index: 6; height: 40px;line-height: 40px;}
 #return-aclist:hover{color: white}
 .nav-tabs{padding-left: 1em;}
